# icpc_domestic2021_c

./: .gitignore  README.md  download.sh  dune-project  icpc_domestic2021_c.opam  run.sh
lib/: dune  id.ml  lexer.mll  parser.mly  solver.ml  syntax.ml
test/: dune
